--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/remedios_api
 spring.datasource.username=root
 spring.datasource.password=q45wzhr0
+
+server.error.include-stacktrace=never
